# NanoGrad

./: .gitignore  README.md  practice.ipynb  setup.py
.ipynb_checkpoints/: practice-checkpoint.ipynb
examples/: feed_forward_mnist.py  mnist.py  mnist_example.ipynb
nano_grad/: mlops.py
nano_grad/csrc/: main.cpp
nano_grad/csrc/Autograd/: CMakeLists.txt  autograd.cpp  autograd.h
nano_grad/csrc/Dispatcher/: CMakeLists.txt  dispatcher.cpp  dispatcher.h
nano_grad/csrc/Ops/: CMakeLists.txt  ops.cpp  ops.h
nano_grad/csrc/Tensor/: CMakeLists.txt  python_tensor.cpp  python_tensor.h  tensor.cpp  tensor.h
nano_grad/csrc/autograd/: autograd.cpp
nano_grad/csrc/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
nano_grad/csrc/nn/: CMakeLists.txt  network.cpp  network.h
nano_grad/csrc/tensor/: python_tesnor.cpp
nano_grad/engine/: Makefile  matrix.py  tensor.py  tester.cpp  tester.py
nano_grad/engine/_CPP/: cpp_backend.py
nano_grad/nn/: activation.py  linear.py  loss.py  network.py  nn.py  optimizer.py
patrick_grad/: tensor.py
slim_grad/: tensor.py
slim_grad/engine/: matrix.py  optimizer.py  tensor.py
slim_grad/parts/: linear.py  neuron.py
tests/: test_linear.py  test_matrix.py  test_tensor.py
